terraform/eip.tf
resource "aws_eip" "web" {
  instance = "${aws_instance.web.id}"
}

resource "aws_eip" "nat_gateway" {
}
